# opv

./: README.rst  pyproject.toml
opv/: __init__.py  __main__.py  objects.py
test/: __init__.py  test_composite.py  test_decoder.py  test_encoder.py  test_objects.py  test_recursive.py  test_storage.py
tests/: test_objects.py
