[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[options]
zip_safe = true
include_package_data = true

[project]
name = "opv"
description = "Object Programming Version"
version = "200"
authors = [
    {name = "Bart Thate", email = "programmingobject@gmail.com" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers = [ 
               'Development Status :: 3 - Alpha',
               'License :: Public Domain',
               'Operating System :: Unix',
               'Programming Language :: Python',
               'Topic :: Utilities'
              ]


[project.urls]
"home" = "https://pypi.org/project/opv"
"bugs" = "https://github.com/bthate/opv/issues"
"source" = "https://github.com/bthate/opv"


[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["opr*"]
exclude = ["tests*",]
namespaces = false
